# AI_novel

./: .gitignore  AI_Novel_Writer.iss  AI_Novel_Writer.spec  AI_Novel_Writer_Keygen.spec  README.md  UI提升方案.md  build_exe.bat  build_installer.bat  ersTaoDocumentstrae_projectsAI_novel  ersTaoDocumentstrae_projectsAI_novel && python -c   ersTaoDocumentstrae_projectsAI_noveltest_phase1.py  keygen_gui.py  license_cli.py  main_gui.py  pyproject.toml  requirements.txt  run.bat  run_app.py  sidebar_styles.css  test.py  使用教程.md  使用说明文档.md  可控与一致性维护.md  技术工作原理.md  项目说明.md
config/: agents.yaml
docs/: ARCHITECTURE.md  CONSISTENCY.md  DEVELOPMENT.md  FAQ.md  PACKAGING.md  README.md  REFACTOR_PLAN.md  UI审核报告_商业化优化.md  USAGE.md  design_notes.md  outline_template.md  重构大纲_启用Memory和协作.md
gui/: dialogs.py  highlighter.py  main_window.py  main_window_legacy.py  styles.py  widgets.py  workers.py  workspace_dialog.py
gui/controllers/: __init__.py  base_controller.py  chapter_controller.py  export_controller.py  project_controller.py
gui/styles/: __init__.py  base.py  components.py  layouts.py  variables.py
gui/views/: __init__.py  chapter_view.py  export_view.py  main_panel_view.py  monitor_view.py  outline_view.py  project_view.py  (+5 more)
legacy/: app.py
license_keys/: private_key.pem  public_key.pem
src/: agent_factory.py  agents.py  api.py  config.py  container.py  exceptions.py  export.py  generator.py  license.py  logger.py  project.py  task_builder.py  tasks.py  tools.py  workspace.py
tests/: __init__.py  conftest.py  test_config.py  test_exceptions.py  test_services.py
(+5 files in other folders)
